started with the functionality creating appointments, additionally made a calendar for each owner to keep track of his appointments